# TradingAgents

./: .env.example  .gitignore  AGENTS.md  AUTHORS.md  PR_DESCRIPTION.md  PR_DESCRIPTION_OPTIMIZED.md  README.md  docker-compose.yml  main.py  model_routing.yaml  pyproject.toml
.cursor/rules/: architecture-design-principles.mdc  documentation-visualization-standards.mdc
.qoder/rules/: arch_docs_standard.md  arch_principles.md  python_env_uv.md
.qoder/specs/: deep-review-improvements.md  phase2-implementation.md  phase3-agent-upgrade.md  phase4-value-investing-framework.md  prompt-management-integration.md  trading-agent-architecture-analysis.md  trading-agent-architecture-phase2-to-phase5.md
assets/arch/: 01-current-architecture.d2  02-target-architecture.d2  03-expert-registry.d2  04-observability.d2  05-long-run-agent-architecture.d2  06-autonomous-trading-agent-architecture.d2  13-frontend-backend-separation-architecture.mmd  13-simplified-page-layout.mmd
assets/docs/: design-deficiencies-and-upgrade-directions.md
cli/: main.py  stats_handler.py  utils.py
dashboard/: __init__.py  app.py
docs/: root-structure.md
docs/arch/: 01-current-architecture.d2  02-target-architecture.d2  03-expert-registry.d2  04-memory-langgraph-analysis.md  05-opensource-replacement-analysis.md  06-file-structure-review.md  07-design-improvements-and-upgrade-roadmap.md  08-redundant-code-removal-analysis.md  09-architecture-and-agent-design-review.md  10-comprehensive-architecture-redesign-spec.md  11-implementation-review-and-issues.md  12-implementation-summary.md  13-frontend-backend-separation-evaluation.md  14-industry-research-trading-agents.md  15-project-positioning-and-evolution.md
docs/plans/: 2026-02-26-feat-frontend-backend-separation-and-agent-evolution-plan.md
docs/pr/: PR_DESCRIPTION.md
docs/usage/: QUICK_START.md  README.md  autonomous-trading.md  long-run-agent.md  plugins.md  setup-environment.md  workflow-config.md
scripts/: init-db.sql  run_single_propagate.py  smoke_yfinance.py
tests/valuation/: __init__.py  test_analyzer.py  test_data_extractor.py  test_moat_analyzer.py  test_models.py
tradingagents/: default_config.py
tradingagents/agents/: __init__.py  base.py
tradingagents/agents/analysts/: fundamentals_analyst.py  market_analyst.py  news_analyst.py  social_media_analyst.py
tradingagents/agents/managers/: research_manager.py  risk_manager.py
tradingagents/agents/researchers/: bear_researcher.py  bull_researcher.py
tradingagents/agents/risk_mgmt/: aggressive_debator.py  conservative_debator.py  neutral_debator.py
tradingagents/agents/specialists/: __init__.py  earnings_tracker.py
tradingagents/agents/trader/: trader.py
tradingagents/agents/utils/: agent_states.py  agent_utils.py  macro_data_tools.py  memory.py  news_data_tools.py  realtime_data_tools.py  valuation_data_tools.py
tradingagents/api/: __init__.py  app.py  dependencies.py
tradingagents/api/routers/: __init__.py  datafeed.py  decisions.py  portfolio.py  ws.py
tradingagents/backtest/: __init__.py  runner.py  strategy.py
tradingagents/cli/: __init__.py  announcements.py  console.py  main.py  models.py  stats_handler.py  utils.py
tradingagents/config/: __init__.py  defaults.py  model_routing.py  runtime.py  settings.py  workflow_config.py
tradingagents/database/: __init__.py  alembic.ini  manager.py  models.py  schema.py
tradingagents/database/migrations/: __init__.py  env.py  script.py.mako
tradingagents/database/migrations/versions/: 4c6b8ce0cf2c_initial_schema_with_all_orm_models.py
tradingagents/dataflows/: alpha_vantage.py  alpha_vantage_common.py  alpha_vantage_fundamentals.py  alpha_vantage_indicator.py  alpha_vantage_news.py  alpha_vantage_stock.py  config.py  data_accessor.py  fred.py  interface.py  longport_api.py  stockstats_utils.py  utils.py  y_finance.py  yfinance_enhanced.py  yfinance_news.py
tradingagents/embeddings/: __init__.py  base.py  google.py  litellm.py  openai.py  sentence_transformers.py
tradingagents/experts/: __init__.py  base.py  registry.py  selector.py  team.py
tradingagents/experts/investors/: __init__.py  buffett.py  graham.py  livermore.py  lynch.py  munger.py
tradingagents/graph/: condition_evaluator.py  conditional_logic.py  convergence.py  edge_connector.py  error_recovery.py  graph_builder.py  lineage.py  long_run.py  node_factory.py  propagation.py  recovery.py  reflection.py  route_resolver.py  setup.py  signal_processing.py  state_manager.py  trading_graph.py
tradingagents/graph/subgraphs/: analyst_subgraph.py
tradingagents/llm_clients/: anthropic_client.py  base_client.py  factory.py  google_client.py  litellm_client.py  openai_client.py
tradingagents/monitoring/: __init__.py  health.py  metrics.py
tradingagents/observability/: __init__.py  cost_estimator.py  langfuse_handler.py
tradingagents/plugins/: __init__.py  manager.py  registry.py
tradingagents/prompts/: __init__.py  fallback.py  init_langfuse.py  manager.py  registry.py
tradingagents/prompts/templates/analysts/: fundamentals.yaml  market.yaml  news.yaml  social.yaml
tradingagents/prompts/templates/experts/: buffett.yaml  graham.yaml  livermore.yaml  lynch.yaml  munger.yaml
tradingagents/prompts/templates/graph/: reflection.yaml  signal_extraction.yaml
tradingagents/research/: __init__.py  deep_research.py
tradingagents/research/providers/: __init__.py  gemini.py  openai.py
tradingagents/scheduler/: __init__.py  scheduler.py
tradingagents/services/: datafeed.py  decisions.py  portfolio.py
tradingagents/trading/: __init__.py  alpaca_adapter.py  decision_parser.py  interface.py  order_executor.py  order_manager.py  position_manager.py  risk_controller.py
tradingagents/utils/: __init__.py  validation.py
tradingagents/valuation/: __init__.py  analyzer.py  data_extractor.py  moat_analyzer.py  models.py
web/: package-lock.json  package.json
web/src/: App.tsx
web/src/api/: client.ts
web/src/pages/: DashboardPage.tsx  DatafeedPage.tsx  DecisionDetailPage.tsx  DecisionsPage.tsx  PositionsPage.tsx
(+12 files in other folders)
