[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tradingagents"
version = "0.2.0"
description = "TradingAgents: Multi-Agents LLM Financial Trading Framework"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain-core>=0.3.83",
    "langchain-anthropic>=0.3.15",
    "langchain-experimental>=0.3.4",
    "langchain-google-genai>=2.1.5",
    "langchain-openai>=0.3.23",
    "langgraph>=1.0.0",
    "backtrader>=1.9.78.123",
    "chainlit>=2.5.5",
    "pandas>=2.3.0",
    "parsel>=1.10.0",
    "pyyaml>=6.0",
    "pytz>=2025.2",
    "questionary>=2.1.0",
    "rank-bm25>=0.2.2",
    "redis>=6.2.0",
    "requests>=2.32.4",
    "rich>=14.0.0",
    "typer>=0.21.0",
    "stockstats>=0.6.5",
    "tqdm>=4.67.1",
    "typing-extensions>=4.14.0",
    "yfinance>=0.2.63",
    "langchain>=1.2.10",
]

[project.optional-dependencies]
observability = ["langfuse>=2.0"]
litellm = ["litellm>=1.0"]
memory = ["chromadb>=0.5.0"]
data-sources = [
    "fredapi>=0.5.0",
    "finnhub-python>=2.4.0",
    "praw>=7.7.0",
]
indicators = ["ta>=0.11.0"]
dashboard = ["streamlit>=1.28.0"]
api = ["fastapi>=0.104.0", "uvicorn>=0.24.0"]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
]

[project.scripts]
tradingagents = "cli.main:app"

[tool.setuptools.packages.find]
include = ["tradingagents*", "cli*"]
